# bsvm

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  RUNAR-FRI-VERIFIER.md  RUNAR-SDK-DATA-OUTPUTS.md  bsvm.json.example  docker-compose.README.md  docker-compose.proving.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: cross-evm-diff.yml  devnet.yml  go-extra.yml  go-test.yml  rust-check.yml
cmd/bsvm/: admin.go  banner.go  beef_w64_integration_test.go  beef_wiring.go  beef_wiring_test.go  boot.go  bridge_blockscan_wiring.go  bridge_bsv_client.go  bridge_bsv_client_test.go  bridge_wiring.go  bridge_wiring_test.go  bsv_provider.go  bsv_provider_test.go  bsv_wiring.go  bsvm.example.json  bsvm.example.toml  chaintracks_wiring.go  chaintracks_wiring_test.go  cluster_init.go  cluster_init_test.go  config.go  config_test.go  deploy_shard.go  dev.go  dev_test.go  devnet_funding.go  devnet_funding_test.go  env.go  fee_wallet_key.go  fee_wallet_key_test.go  init_local.go  main.go  main_test.go  woc_wiring.go  woc_wiring_test.go
cmd/bsvm-sim/: main.go
cmd/evm-cli/: main.go  main_test.go
contracts/: README.md
contracts/src/: MinimalERC20.sol  MinimalERC721.sol  MinimalMultisig.sol  MinimalWETH.sol  SimpleAMM.sol  Storage.sol
docs/: gate0-results.md  sp1-evm-proof-metrics.md  sp1-fri-parameters.md  sp1-proof-format.md
docs/decisions/: P-versioned-hash-audit.md  W6-7-runar-broadcast-status.md  beef-graph-validation.md  header-oracle-quorum.md  inbox-drain.md
internal/db/: database.go  database_test.go  leveldb.go  memorydb.go  pebble.go  pebble_test.go
pkg/arc/: brc104.go  brc104_test.go  callback.go  callback_test.go  client.go  client_test.go  multi_client.go  multi_client_test.go
pkg/beef/: chaintracker_adapter.go  envelope.go  envelope_test.go  parse.go  parse_test.go  store.go  store_test.go  verify.go  verify_test.go
pkg/block/: anchor.go  apply.go  apply_test.go  batch.go  batch_test.go  block_test.go  chaindb.go  executor.go  gas_pool.go  genesis.go  log_index.go  log_index_test.go  state_transition.go  system_tx.go  system_tx_test.go  types.go
pkg/bridge/: bridge_test.go  config.go  deposit.go  deposit_tree.go  deposit_tree_test.go  monitor.go  ordering.go  predeploy.go  predeploy_test.go  replay_test.go  retract_test.go  types.go  withdrawal.go  withdrawer.go  withdrawer_test.go
pkg/bsv/: bsv_test.go  types.go
pkg/bsvclient/: multi_rpc_provider.go  multi_rpc_provider_test.go  network.go  network_test.go  reorg_subscriber.go  reorg_subscriber_test.go  rpc_provider.go  rpc_provider_test.go
pkg/chaintracks/: checkpoints.go  checkpoints_test.go  client.go  client_test.go  multi_client.go  multi_client_test.go  remote.go  stream.go  stream_test.go  validation.go  validation_test.go
pkg/covenant/: advance_invariants_test.go  bridge_commitment_test.go  bridge_manager.go  bridge_manager_test.go  bridge_state.go  bridge_state_test.go  broadcast.go  bsv_tx.go  bsv_tx_test.go  compile.go  compile_f11_test.go  compile_test.go  covenant_test.go  detect.go  detect_test.go  fake_broadcast.go  fee_wallet.go  fee_wallet_consolidate.go  fee_wallet_test.go  genesis.go  genesis_test.go  governance.go  governance_negative_test.go  governance_test.go  groth16_real_pairing_test.go  groth16_vk_loader.go  groth16_vk_loader_pinning_test.go  groth16_vk_loader_test.go  groth16_zero_workaround_test.go  inbox_state.go  inbox_state_test.go  manager.go  manager_broadcast.go  manager_test.go  runar_broadcast.go  script_determinism_test.go  state.go  unlock.go  verify.go
pkg/crypto/: address.go  crypto_test.go  keccak.go  keccak_state.go  kzg.go  kzg_test.go  lows_test.go  secp256k1.go
pkg/event/: feed.go  feed_test.go  subscription.go
pkg/governance/: proposal.go  proposal_test.go  workflow.go
pkg/indexer/: indexer.go  indexer_test.go
pkg/metrics/: metrics.go  metrics_test.go  network.go
pkg/mpt/: bytepool.go  committer.go  database.go  derive.go  encoding.go  errors.go  hasher.go  iterator.go  node.go  node_enc.go  proof.go  proof_roundtrip_test.go  secure_trie.go  stacktrie.go  tracer.go  trie.go  trie_id.go  trie_reader.go  trie_test.go
pkg/network/: config.go  genesis_sync.go  genesis_sync_test.go  gossip.go  network_test.go  peers.go  protocol.go  sync.go
pkg/overlay/: batch.go  cache.go  cascade_rollback.go  cascade_rollback_test.go  circuit_breaker.go  circuit_breaker_test.go  config.go  confirmation_watcher.go  confirmation_watcher_test.go  dsmonitor.go  execution_verifier.go  execution_verifier_test.go  fee_wallet.go  gas.go  node.go  (+21 more)
prover/guest/: Cargo.toml  rust-toolchain.toml
prover/guest/src/: inbox.rs  lib.rs  main.rs  mpt.rs  proof_verify.rs  tx.rs
prover/host/: Cargo.toml
prover/host-bridge/: Cargo.toml
prover/host-bridge/src/: main.rs
prover/host-evm/: Cargo.toml  build.rs
prover/host-evm/artifacts/: .gitignore
prover/host-evm/src/: main.rs
prover/host/src/: main.rs
prover/proof-verify-test/: Cargo.toml
prover/proof-verify-test/src/: lib.rs
prover/proof-verify-test/tests/: cross_check.rs
scripts/: docker-build.sh
spec/: 00-PROJECT-OVERVIEW.md  01-EVM-EXTRACTION.md  02-STATE-DB.md  03-BLOCK-ENGINE.md  04-BSV-ANCHOR.md  05-RPC-GATEWAY.md  06-SEQUENCER.md  07-BRIDGE.md  08-GENESIS-AND-NODE.md  09-IMPLEMENTATION-ORDER.md  10-DEEP-BSV-INTEGRATION.md  11-BSV-OVERLAY.md  12-STATE-TRANSITION-PROOFS.md  13-RUNAR-REQUIREMENTS.md  15-EXPLORER-ADMIN-UI.md  16-DEVNET.md  17-CHAINTRACKS-BEEF-ARC.md
test/mpt_conformance/rust_runner/: Cargo.toml
test/mpt_conformance/rust_runner/src/: main.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
whitepaper/: bsvm-security-model.tex  bsvm-whitepaper.tex  build.sh
(+336 files in other folders)
