[package]
name = "bsvm-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "6.0.2"
revm = { version = "31.0.2", default-features = false, features = ["serde"] }
revm-primitives = { version = "21.0.2", default-features = false, features = ["serde"] }
alloy-primitives = { version = "1.5.2", default-features = false, features = ["rlp", "serde"] }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-trie = { version = "0.9.3", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
bincode = "1.3"
sha2 = "0.10"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-6.0.0", package = "sha2" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-6.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-6.0.0" }
