[package]
name = "bsvm-guest"
version = "0.1.0"
edition = "2021"

[lib]
# Library facet of the SP1 guest, exposing pure-Rust modules (e.g. `tx`)
# so they can be unit-tested with `cargo test --lib` on the host. The
# proving entrypoint stays in `src/main.rs` and is unaffected.
name = "bsvm_guest"
path = "src/lib.rs"

[[bin]]
name = "bsvm-guest"
path = "src/main.rs"

[dependencies]
sp1-zkvm = "6.0.2"
revm = { version = "31.0.2", default-features = false, features = ["serde"] }
revm-primitives = { version = "21.0.2", default-features = false, features = ["serde"] }
# `k256` feature pulls in the `Signature::recover_address_from_prehash`
# API the guest uses for signature-derived sender recovery (W4-2). The
# patched `k256` below redirects the heavy curve ops onto SP1's
# secp256k1 precompile when running under the zkVM.
alloy-primitives = { version = "1.5.2", default-features = false, features = ["rlp", "serde", "k256"] }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-trie = { version = "0.9.3", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
bincode = "1.3"
sha2 = "0.10"

[dev-dependencies]
# Used by the host-side unit tests (cargo test --lib) to construct
# signed txs with a known key so we can round-trip through
# `tx::decode_and_recover`.
k256 = { version = "0.13.4", features = ["ecdsa"] }

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-6.0.0", package = "sha2" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-6.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-6.0.0" }
