[package]
name = "bsvm-host-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { version = "6.0.2", default-features = false }
sp1-build = "6.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
bincode = "1.3"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
sp1-build = "6.0.2"
