[package]
name = "bsvm-host-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { version = "6.0.2", default-features = false }
sp1-build = "6.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
sp1-build = "6.0.2"
