[package]
name = "bsvm-host"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { version = "6.0.2", default-features = false }
sp1-build = "6.0.2"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
hex = "0.4"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
sp1-build = "6.0.2"
