[package]
name = "mpt-conformance-runner"
version = "0.1.0"
edition = "2021"
publish = false
description = "Cross-implementation MPT conformance runner using alloy-trie. Runs the same JSON fixtures consumed by the Go runner and emits a step-by-step root report."

[[bin]]
name = "rust_runner"
path = "src/main.rs"

[dependencies]
# alloy-trie pinned to the same version used by the SP1 guest (prover/guest)
# so this host runner exercises the exact MPT implementation that the
# prover relies on for state roots.
alloy-trie = { version = "0.9.3", default-features = false }
alloy-primitives = { version = "1.5.2", default-features = false, features = ["rlp"] }
alloy-rlp = { version = "0.3.12", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
